Fixes z-index when sidebar is active

--- a/src/pages/InnerContainer/InnerContainer.scss
+++ b/src/pages/InnerContainer/InnerContainer.scss
@@ -1,7 +1,6 @@
 @import '../../styles/variables';
 
 .contentWrapper {
-  z-index: 0;
   flex-shrink: 0;
   flex-grow: 1;
   flex-basis: calc(100% - 3.5rem);
